--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,19 @@ services:
         volumes:
             - ./nginx/default.nginx:/etc/nginx/conf.d/default.conf
             - ./:/var/www/html/
+            - ./log/nginx:/var/log/nginx
         ports:
             - 80:80
     php:
         build:
             context: .
             dockerfile: Dockerfile
-        image: test_app
-        container_name: testapp
+        image: fault_app
+        container_name: fault
         restart: always
         volumes:
             - ./:/var/www/html/
+            - ./log/nginx:/var/log/nginx
         networks:
             - backend
         tty: true
