--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "phpstan/phpstan": "^1.7"
     },
     "scripts": {
         "test": "phpunit tests --colors=always --coverage-html=coverage --whitelist 'src/'"
